--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     text-align: center;
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
+    margin: 0;
   }
   
   a {
@@ -19,6 +20,9 @@ body {
   
   nav img {
     display: block;
+    width: 180px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   nav span {
@@ -26,6 +30,8 @@ body {
     font-size: 16px;
     font-weight: 100;
     letter-spacing: 2px;
+    margin-top: 10px;
+    margin-bottom: 0px;
   }
   
   nav a {
@@ -36,6 +42,9 @@ body {
   
   .content {
     width: 100%;
+    height: 500px;
+    margin: 10px auto;
+    overflow: scroll;
   }
   
   /* Content Header */
@@ -44,6 +53,7 @@ body {
     background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_burgerphoto.jpeg");
     background-position: center;
     background-size: cover;
+    height: 320px;
   }
   
   .header h1 {
@@ -54,6 +64,8 @@ body {
     font-weight: 300;
     line-height: 40px;
     width: 68%;
+    padding: 20px;
+    margin: 0 auto;
   }
   
   /* Content Body */
@@ -77,6 +89,10 @@ body {
     color: #05A8AA;
     display: block;
     font-weight: 700;
+    width: 200px;
+    padding: 20px;
+    margin: 40px auto;
+    border: 1px solid blue;
   }
   
   .button:hover {
@@ -88,12 +104,16 @@ body {
   /* Content Nutrition */
   
   ul.nutrition {
+    padding: 20px;
   }
   
   ul.nutrition li {
     display: inline-block;
     background-color: #05A8AA;
     list-style: none;
+    width: 200px;
+    padding: 10px 20px;
+    margin: 3px;
   }
   
   .nutrition .category {
